# gst-dji-moonlight-shim-plugin

./: CMakeLists.txt  README.md  config.h.in
.devcontainer/: Containerfile  devcontainer.json
src/: dji_usb.c  dji_usb.h  gstdjimoonlightshimsink.c  gstdjimoonlightshimsink.h
